Added automatic tab rotation
Added automatic tab rotation using rotate rate. In this way the pages are not reloaded avoiding the annoying initial page refresh effect. Pages should be refreshed via AJAX.

Updated to materialize.js to v1.0.0-beta.

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Kiosk",
+  "name": "ZIKiosk",
   "description": "Launch any URL as a full-screen kiosk.",
   "manifest_version": 2,
-  "version": "5.14.1",
+  "version": "5.14.2",
   "author": {
-    "name": "Matt Cook",
-    "email": "matt@lookitscook.com"
+    "name": "Lorenzo Zimolo",
+    "email": "zilog@tin.it"
   },
   "kiosk_enabled": true,
   "offline_enabled": true,
