Added ability to remove tabs labels
Added ability to remove tabs labels: check 'Hide Tabs Labels'

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 
 www/.DS_Store
+.DS_Store
+img/icon_128 copia.png
+img/icon_128.png
+img/icon_128.png
+img/icon_16 copia.png
+img/icon_128.png
+img/icon_16.jpg
+img/icon_16.png
+img/icon_128.png
+img/icon_16.png
+img/icon_16.png
+img/icon_16.png
+img/icon_128.png
+img/icon_16.png
+img/icon_128.png
