--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "ZIKiosk",
+  "name": "ZIKioskTest",
   "description": "Launch any URL as a full-screen kiosk.",
   "manifest_version": 2,
-  "version": "5.14.2",
+  "version": "6.0.0",
   "author": {
     "name": "Lorenzo Zimolo",
-    "email": "zilog@tin.it"
+    "email": "lorenzo.zimolo@zoppas.com"
   },
   "kiosk_enabled": true,
   "offline_enabled": true,
