--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "ZIKioskDev",
+  "name": "ZIKioskTest",
   "description": "Launch any URL as a full-screen kiosk.",
   "manifest_version": 2,
   "version": "6.0.8",
